--- a/AppF/src/main/resources/static/appF.css
+++ b/AppF/src/main/resources/static/appF.css
@@ -2,61 +2,122 @@ body{
       background-image:url(../static/img/fondoAluramarron.png);
       background-size:cover;
 }
+p{
+      font-size:20px;
+
+}
+#cuadroOpcion{
+      margin-left:45px;
+      width:1200px;
+      height:95px;
+}
+.col-3{
+      padding-top:0.1%;
+}
+.col-5{
+      align-content:center;
+}
 #logoAlura {
       width: 70px;
       height: 50px;
-      margin-top: 10px;
+      margin-top: 7px;
+      margin-bottom:5%;
 }
 #logoBuscar {
       display:flex;
-      width: 40px;
-      height: 60px;
+      width: 25px;
+      height: 35px;
 }
-.topico{
-
+select{
+      height:35px;
+      border-radius:10px;
+      background-color:bisque;
 }
 #textoIngresado {
-      width: 600px;
-      height: 60px;
+      width: 290px;
+      height: 45px;
       font-family: sans-serif;
       color: #131212;
       background-color:bisque;
-      outline-style: none;
+      /*outline-style: none;*/
       border-radius:10px;
-      margin-top:4%;
-      margin-left:45px;
+      margin-left:10%;
 }
 #salidadTexto {
-      width: 600px;
+      width: 1200px;
       height:400px;
       font-family: sans-serif;
       color: #131212;
       background-color:transparent;
       outline-style: none;
       margin-top:1%;
-      margin-left:45px
+      margin-left:3%;
+      border-radius:10px;
       /*border:none;*/
+}
+#botones{
+      padding-top:2%;
+}
+.botonTodos{
+      width:80px;
+      background-color:bisque;
+      color: black;
+      cursor: pointer;
+      border-width:thin;
+      border-radius:10px;
+}
+.botonSinResolver{
+      width:110px;
+      background-color:bisque;
+      color: black;
+      cursor: pointer;
+      border-width:thin;
+      border-radius:10px;
+}
+.botonResueltos{
+      width:80px;
+      background-color:bisque;
+      color: black;
+      cursor: pointer;
+      border-width:thin;
+      border-radius:10px;
 }
 .botonBuscar{
       background-color:transparent;
 }
-.botonCopiar {
-      width:100px;
-      background-color: #1e607a;
-      color: white;
+.botonCrearTopico{
+      width:170px;
+      background-color:bisque;
+      color: black;
       cursor: pointer;
+      border-width:thin;
+     margin-left:42%;
+      margin-bottom:3%;
+      margin-top:3%;
+      border-radius:10px;
+}
+/*.botonCopiar {
+      width:80px;
+      background-color: bisque;
+      color: black;
+      cursor: pointer;
+      border-width:thin;
+      border-radius:10px;
 }
 .botonCopiar:hover {
-      background-color: #0a335f;
+      background-color: #3f6793;
+} */
+.botonTodos:hover {
+      background-color: #3f6793;
 }
-#imagenOracle{
-      width: 400px;
-      height: 400px;
+.botonSinResolver:hover {
+      background-color: #3f6793;
 }
-p{
-      font-family: sans-serif;
-      font-size: 10px;
-      margin-left:25px;
+.botonResueltos:hover {
+      background-color: #3f6793;
+}
+.botonCrearTopico:hover {
+      background-color: #3f6793;
 }
 footer{
       margin-top:0%;
